# flowrs

./: .gitignore  Dockerfile  README.md  build.sh
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml  tests.yml
flowrs/: Cargo.toml  Cargo.toml.bak  flowrs.pyi  pyproject.toml
flowrs/src/: error.rs  lib.rs  scheduler.rs  task.rs
flowrs/src/functions/: mod.rs
scripts/: build_dev.sh  release.sh
scripts/devcontainer/: setup.sh
tests/: test_flowrs.py  test_functions.py  test_workflow.py
