[package]
name = "flowrs"
description = "Workflow automation with the power of Rust."
readme = "../README.md"
license = "MIT"
license-file = "../LICENSE"
version = "1.2.1"
edition = "2021"

include = [
  "../README.md",
  "../LICENSE"
]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
thiserror = "2"
rayon = "1.10"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"

[lib]
crate-type = ["cdylib"]  # Required for Python extensions

[package.metadata.maturin]
bindings = "pyo3"
