[package]
name = "flowrs"
description = "Workflow automation with the power of Rust."
readme = "../README.md"
license-file = "../LICENSE"
version = "1.2.1"
edition = "2021"

include = [
  "../README.md",
  "../LICENSE"
]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
chrono = "0.4"

[lib]
crate-type = ["cdylib"]  # Required for Python extensions

[package.metadata.maturin]
bindings = "pyo3"
